err/tproxy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tproxy'...
Compiling './lib/python3.5/site-packages/tproxy/app.py'...
***   File "./lib/python3.5/site-packages/tproxy/app.py", line 83
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tproxy/arbiter.py'...
***   File "./lib/python3.5/site-packages/tproxy/arbiter.py", line 153
    except HaltServer, inst:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tproxy/client.py'...
***   File "./lib/python3.5/site-packages/tproxy/client.py", line 54
    except ConnectionError, e:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tproxy/pidfile.py'...
***   File "./lib/python3.5/site-packages/tproxy/pidfile.py", line 79
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tproxy/proxy.py'...
***   File "./lib/python3.5/site-packages/tproxy/proxy.py", line 115
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tproxy/sendfile.py'...
***   File "./lib/python3.5/site-packages/tproxy/sendfile.py", line 41
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tproxy/util.py'...
***   File "./lib/python3.5/site-packages/tproxy/util.py", line 119
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tproxy-0.5.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
Listing './tproxy'...
